--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,14 @@
 workflows:
-  version: 2
-  build_and_test:
+  main:
+    environment:
+      node: latest
     scripts:
       - name: Install dependencies
-        script: yarn install
+        script: npm ci
       - name: Build Android APK
-        script: yarn android:build
+        script: npm run build-android
       - name: Build iOS IPA
-        script: yarn ios:build
+        script: npm run build-ios
+    artifacts:
+      - build/android/app/build/outputs/apk/release/app-release.apk
+      - build/ios/Runner.ipa
