--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "build-android": "cd android && ./gradlew assembleRelease"
+    "build-android": "cd android && ./gradlew assembleRelease",
+    "build-ios": "react-native run-ios --configuration Release"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.0",
