--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android --variant=release",
+    "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "build-android": "cd android && ./gradlew assembleRelease",
-    "build-ios": "react-native run-ios --configuration Release"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.0",
